# stable-diffusion-tauri-ui

./: README.md  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: generate_image.rs  main.rs
